# esp32-airplay-speaker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  README.upstream.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.bt  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esparagus-audio-brick  sdkconfig.defaults.esparagus-audio-brick-s3  sdkconfig.defaults.esparagus-louder  sdkconfig.defaults.squeezeamp  sdkconfig.defaults.squeezeamp-4m  sdkconfig.defaults.wrover  sdkconfig.defaults.xiao
.githooks/: pre-commit
.github/workflows/: ci-release.yml
cmake/: fix_usb_device_uac_platformio.cmake
components/audio-resampler/: CMakeLists.txt  resampler.c  resampler.h
components/board_utils/: CMakeLists.txt  board_utils.c  board_utils.h
components/boards/: CMakeLists.txt  Kconfig.projbuild  board_common.c  board_common.h  idf_component.yml  partitions-16m.csv  partitions-4m.csv  partitions.csv
components/boards/esp32-generic/: board.c  iot_board.h
components/boards/esp32s3-generic/: board.c  iot_board.h
components/boards/esparagus-audio-brick/: board.c  iot_board.h
components/boards/squeezeamp/: board.c  iot_board.h
components/boards/waveshare-esp32p4/: board.c  iot_board.h
components/dac/: CMakeLists.txt  Kconfig  dac.c  idf_component.yml
components/dac/include/: dac.h
components/dac_tas57xx/: CMakeLists.txt  Kconfig  dac_tas57xx.c  dac_tas57xx.h  idf_component.yml
components/dac_tas57xx/hybridflows/: hybridflow_convert_cfg.py
components/dac_tas58xx/: CMakeLists.txt  Kconfig  dac_tas58xx.c  dac_tas58xx.h  dac_tas58xx_eq.h  dac_tas58xx_eq_data.h  idf_component.yml
components/display/: CMakeLists.txt  README.md  display.c  display_st7789.c  display_stub.c  idf_component.yml  make_background.py
components/display/include/: display.h
components/spiffs_storage/: CMakeLists.txt  spiffs_storage.c  spiffs_storage.h
components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
data/www/: eq.html  index.html  logs.html  speedtest.html
docs/: boite esp32.stl
main/: CMakeLists.txt  Kconfig.projbuild  alac_magic_cookie.c  alac_magic_cookie.h  amp_ctrl.c  amp_ctrl.h  buttons.c  buttons.h  dacp_client.c  dacp_client.h  led.c  led.h  led_argb.c  led_argb.h  led_matrix.c  led_matrix.h  main.c  playback_control.c  playback_control.h  settings.c  settings.h  spiram_task.h
main/audio/: a2dp_sink.c  a2dp_sink.h  audio_buffer.c  audio_buffer.h  audio_crypto.c  audio_crypto.h  audio_decoder.c  audio_decoder.h  audio_limiter.c  audio_limiter.h  audio_output.c  audio_output.h  audio_output_spdif.c  audio_output_usb.c  audio_receiver.c  audio_receiver.h  audio_receiver_internal.h  audio_resample.c  audio_resample.h  audio_stream.c  audio_stream.h  audio_stream_realtime.c  audio_timing.c  audio_timing.h  eq_dsp.c  eq_dsp.h  eq_events.c  eq_events.h
main/hap/: hap.c  hap.h  hap_crypto.c  hap_internal.h  hap_pair_setup.c  hap_pair_verify.c  srp.c  srp.h  tlv8.c  tlv8.h
main/network/: dns_server.c  dns_server.h  ethernet.c  ethernet.h  ha_mqtt.c  ha_mqtt.h  log_stream.c  log_stream.h  mdns_airplay.c  mdns_airplay.h  ntp_clock.c  ntp_clock.h  ota.c  ota.h  ptp_clock.c  ptp_clock.h  socket_utils.c  socket_utils.h  web_server.c  web_server.h  wifi.c  wifi.h
main/plist/: base64.c  base64.h  bplist_builder.c  bplist_parser.c  plist.h  plist_xml.c
main/rtsp/: rtsp_conn.c  rtsp_conn.h  rtsp_crypto.c  rtsp_crypto.h  rtsp_events.c  rtsp_events.h  rtsp_fairplay.c  rtsp_fairplay.h  rtsp_handlers.c  rtsp_handlers.h  rtsp_message.c  rtsp_message.h  rtsp_rsa.c  rtsp_rsa.h  rtsp_server.c  rtsp_server.h
scripts/: format.sh  gen_eq_tables.py  lint.sh
